Add more charts

--- a/main.ipynb
+++ b/main.ipynb
@@ -108,7 +108,7 @@
     "    upper = domain$upper,\n",
     "    popSize = 50,\n",
     "    maxiter = budget,\n",
-    "    run = 10,             # Stop if the best solution doesn't improve for 10 generations\n",
+    "    run = 20,             # Stop if the best solution doesn't improve for 10 generations\n",
     "    monitor = FALSE\n",
     "  )\n",
     "  \n",
@@ -188,6 +188,71 @@
    },
    "outputs": [],
    "source": [
+    "ggplot(res, aes(x = Function, y = Value, fill = Algorithm)) +\n",
+    "  geom_violin() +\n",
+    "  facet_wrap(~Algorithm + Function, scales = \"free\") +\n",
+    "  labs(title = \"Comparison of PRS and MS on Rosenbrock and Rastrigin Functions\",\n",
+    "       y = \"Minimum Function Value\",\n",
+    "       x = \"Function and Dimension\") +\n",
+    "  theme_minimal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "generate_plot <- function(data, function_name, algorithm_name) {\n",
+    "  subset_data <- data %>%\n",
+    "    filter(Function == function_name, Algorithm == algorithm_name)\n",
+    "  \n",
+    "  subset_data <- subset_data %>%\n",
+    "    filter(!is.na(Value) & is.finite(Value))\n",
+    "  \n",
+    "  mean_value <- mean(subset_data$Value, na.rm = TRUE)\n",
+    "  iqr_value <- IQR(subset_data$Value, na.rm = TRUE)\n",
+    "  \n",
+    "  subset_data <- subset_data %>%\n",
+    "    filter(Value >= (mean_value - 5 * iqr_value) & Value <= (mean_value + 5 * iqr_value))\n",
+    "  \n",
+    "  bin_width <- diff(range(subset_data$Value)) / 30\n",
+    "  \n",
+    "  ggplot(subset_data, aes(x = Value)) +\n",
+    "    geom_histogram(binwidth = bin_width, fill = \"blue\", color = \"black\", alpha = 0.5) +\n",
+    "    geom_vline(aes(xintercept = min(Value, na.rm = TRUE)), color = \"green\", size = 1) +\n",
+    "    geom_vline(aes(xintercept = mean(Value, na.rm = TRUE)), color = \"red\", linetype = \"dashed\", size = 1) +\n",
+    "    labs(\n",
+    "      title = paste(function_name, algorithm_name),\n",
+    "      x = \"Values\",\n",
+    "      y = \"Count\"\n",
+    "    ) +\n",
+    "    theme_minimal()\n",
+    "}\n",
+    "\n",
+    "for (function_name in c(\"rosenbrock_2d\", \"rosenbrock_10d\", \"rosenbrock_20d\", \"rastrigin_2d\", \"rastrigin_10d\", \"rastrigin_20d\")) {\n",
+    "  for (algorithm_name in c(\"MS\", \"GA\")) {\n",
+    "    print(paste(\"Generating plot for\", function_name, algorithm_name))\n",
+    "    plot <- generate_plot(results, function_name, algorithm_name)\n",
+    "    if (!is.null(plot)) print(plot)\n",
+    "  }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
     "statistical_analysis <- function(results) {\n",
     "  results %>%\n",
     "    group_by(Function, Algorithm) %>%\n",
@@ -203,17 +268,6 @@
     "\n",
     "t_tests"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
